# mobius_scaffold

./: Cargo.toml  README.md  generated_main.rs
src/: main.rs
templates/: main.rs.tera
